--- a/wellington/style.css
+++ b/wellington/style.css
@@ -31,6 +31,7 @@
     padding: .5rem;
     text-align: center;
     text-decoration: none;
+
 }
 
 li a{
@@ -76,12 +77,19 @@ body{
 }
 
 .grid {
-    display:grid;
+    display: grid;
     max-width: 1200px;
-    grid-template-rows: auto;
-    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 2fr;
+    
     grid-gap: 2rem;
 }
+
+.wellington {
+    
+    grid-column: 1 /1;
+}
+
 
 
 
@@ -130,20 +138,8 @@ button {
     display:none;
 }
 
-.property:hover + button.button {
-    display: inline-block;
-    padding: 15px 25px;
-    font-size: 24px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-    background-color: rgb(99, 220, 241);
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px #999;
-}
+
+
 
 .phototitle {
     display:inline-flex;
@@ -152,3 +148,51 @@ button {
 .button {
     display:inline;
 }
+
+
+
+
+.gallery {
+    margin:10px;
+    grid-column: 2;
+    display: grid;
+    grid-template: 100px 200px 1/ 25% 1fr;
+    justify-content: self;
+    align-content: stretch;
+  }
+
+  .gallery h3{
+      grid-column: 1 / span 2;
+      grid-row: 1 / span 1;
+ 
+  }
+  .gallery .thumbnails{
+      grid-column: 1 / span 2;
+      grid-row: 3 / span 1;
+  }
+
+  .gallery .preview{
+      grid-column: 1 / span 2;
+      grid-row: 2 / span 1;
+      justify-content: stretch;
+      
+  }
+
+  
+   .thumbnails img {
+          height: 80px;
+          border: 4px solid #555;
+          padding: 1px;
+          margin: 0 10px 10px 0;
+      }
+  
+   .thumbnails img:hover {
+          border: 4px solid #00ccff;
+          cursor:pointer;
+      }
+  
+   .preview img {
+          border: 4px solid #444;
+          padding: 1px;
+          max-height: 300px;
+          max-width: 90%;}
