--- a/wellington/style.css
+++ b/wellington/style.css
@@ -77,7 +77,7 @@ body{
 }
 
 .grid {
-    display: grid;
+    display: block;
     max-width: 1200px;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 2fr;
@@ -86,8 +86,9 @@ body{
 }
 
 .wellington {
-    
+    padding-top: 3.5rem;
     grid-column: 1 /1;
+    display:none;
 }
 
 
@@ -129,10 +130,7 @@ body{
     margin: 20px;
 }
 
-.property:hover {
-    border:5px solid rgb(99, 220, 241);
-    
-}
+
 
 button {
     display:none;
@@ -153,7 +151,7 @@ button {
 
 
 .gallery {
-    margin:10px;
+    
     grid-column: 2;
     display: grid;
     grid-template: 100px 200px 1/ 25% 1fr;
